Porting others to new format

--- a/cv.tex
+++ b/cv.tex
@@ -38,19 +38,42 @@
 % PAGE GEOMETRY
 %----------------------------------------------------------------------------------------
 
-\usepackage[margin=2cm, lmargin=0.5cm, rmargin=0.5cm]{geometry} % The page Geometry
+\usepackage[margin=2cm, lmargin=1cm, rmargin=1cm]{geometry} % The page Geometry
 
 %----------------------------------------------------------------------------------------
 % CUSTOM ENVIRONMENTS
 %----------------------------------------------------------------------------------------
-\newcommand{\project}[3]{
-    \begin{tabular}{>{\raggedleft}p{2.2cm}|p{17cm}}
-        \textsc{#1} & \textcolor{NavyBlue}{#2} \\
-                    & \footnotesize{#3} \\
+\newcommand{\project}[4]{
+    \begin{tabular}{p{17cm}r}
+        \textcolor{NavyBlue}{#2} & \textsc{#1}\\
+        #3
     \end{tabular}
+    \begin{tabular}{p{\linewidth}}
+        \footnotesize{#4}
+    \end{tabular}
+    \vspace{-0.1cm}
 }
 
-\newcommand{\projectlist}[3]{
+\newcommand{\sideproject}[3]{
+    \begin{tabular}{p{17cm}r}
+        \textcolor{NavyBlue}{#2} & \textsc{#1}
+    \end{tabular}
+    \begin{tabular}{p{\linewidth}}
+        \footnotesize{#3}
+    \end{tabular}
+    \vspace{-0.2cm}
+}
+
+\newcommand{\projectlist}[2]{
+    \begin{tabular}{p{\linewidth}}
+        \textcolor{NavyBlue}{#1}\\
+        \vspace{-0.3cm}
+        \footnotesize{#2}
+    \end{tabular}
+    \vspace{-0.4cm}
+}
+
+\newcommand{\work}[3]{
     \begin{tabular}{>{\raggedleft}p{2.2cm}|p{17cm}}
         \textsc{#1} & #2
                     \footnotesize{#3}
@@ -193,31 +216,31 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \section{Work Experience}
 
-\projectlist {May-Jul 2014}
-         {Research Intern at \textsc{Microsoft Research India}, Bangalore}
-         {
-            \begin{itemize}[leftmargin=*]
-                \item Optimized \textbf{CScale for concurrency} using \textbf{TPL Dataflow}
-                    for dataflow computations and pipeline processing.
-                \item CScale provides a declarative distributed systems programming
-                    model using LINQ; it handles scaling and failures for the programmer.
-                \item Performed \textbf{failure testing and performance testing}
-                    of the concurrency optimizations in real world scenarios.
-            \end{itemize}
-        }
+\work {May-Jul 2014}
+      {Research Intern at \textsc{Microsoft Research India}, Bangalore}
+      {
+         \begin{itemize}[leftmargin=*]
+             \item Optimized \textbf{CScale for concurrency} using \textbf{TPL Dataflow}
+                 for dataflow computations and pipeline processing.
+             \item CScale provides a declarative distributed systems programming
+                 model using LINQ; it handles scaling and failures for the programmer.
+             \item Performed \textbf{failure testing and performance testing}
+                 of the concurrency optimizations in real world scenarios.
+         \end{itemize}
+     }
 
-\projectlist {May-Jul 2013}
-         {Software Development at \textsc{Aurus Networks'}, Bangalore}
-         {
-            \begin{itemize}[leftmargin=*]
-                \item Worked on \textbf{Aurus Networks} MOOC offereing \textbf{CourseHub}.
-                \item Using \textbf{HTML5, javascript, CSS3}, I ported the legacy
-                      \textbf{Flash} based online media player to a multi-platform
-                      Flash/HTML5 media player.
-                  \item Developed a \textbf{XMPP} based \textbf{real-time chat service} for
-                      conversations during live lectures.
-            \end{itemize}
-        }
+\work {May-Jul 2013}
+      {Software Development at \textsc{Aurus Networks'}, Bangalore}
+      {
+          \begin{itemize}[leftmargin=*]
+              \item Worked on \textbf{Aurus Networks} MOOC offereing \textbf{CourseHub}.
+              \item Using \textbf{HTML5, javascript, CSS3}, I ported the legacy
+                  \textbf{Flash} based online media player to a multi-platform
+                  Flash/HTML5 media player.
+              \item Developed a \textbf{XMPP} based \textbf{real-time chat service} for
+                  conversations during live lectures.
+          \end{itemize}
+      }
 
 %----------------------------------------------------------------------------------------
 %  PROJECTS
@@ -225,79 +248,80 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 \section{Projects}
 
 \project {Fall 2014}
-         {Multi Factor Authentication in OpenVPN, \textsc{\raggedright Mozilla Winter of Security}}
+         {Multi Factor Authentication in OpenVPN}
+         {\textsc{\raggedright Mozilla Winter of Security}, Guillaume Destuynder and Professor Dheeraj Sanghi}
          {This project was one of the eleven projects selected for Mozilla Winter of Security's 2014 edition.
-         Under the guidance of \textbf{Guillaume Destuynder} and \textbf{Professor Dheeraj Sanghi},
-         the project aims to add true multi factor authentication support to OpenVPN.}
+          The objective of the project is to implement multi factor session
+          support and first-class multifactor authentication support to
+          OpenVPN.}
 
 \project {Spring 2014}
-         {JavaScript to MIPS Compiler, \textsc{\raggedright Compilers}}
+         {JavaScript to MIPS Compiler}
+         {\textsc{\raggedright Compilers}, Professor Subhajit Roy}
          {An end-to-end compiler for a subset of ECMAScript5.1 which compiled to MIPS was implemented in Python.
           No runtime support was provided ergo, static types and type annotations were used instead.
-          The project was undertaken in the aegis of \textbf{Professor Subhajit Roy}.
           \href{https://github.com/srijanshetty/javascript-compiler} {[Git Repo]}}
 
 \project {Spring 2014}
-         {Hindi author attribution, \textsc{\raggedright Artificial Intelligence}}
+         {Hindi author attribution}
+         {\textsc{\raggedright Artificial Intelligence}, Professor Amitabha
+          Mukherjee}
          {The first half of this project was a multi-class clustering problem,
           wherein authors were to be clustered according to their writing style.
           The features used for the same were, word frequency counts and collocation
           frequencies.  The second half of the project was to classify the text snippets
           into different authors using supervised learning techniques.
-          The project was supervised by \textbf{Professor Amitabha Mukherjee} and was
-          inherently difficult due to the unavailability of stemmers and POS taggers for Hindi.
+          The inherent difficult in the project was the unavailability of stemmers and POS taggers for Hindi.
           \href{https://github.com/srijanshetty/author-attribution} {[Git Repo]}}
 
 \project {Fall 2013}
-         {NachOS, \textsc{Operating Systems}}
+         {NachOS}
+         {\textsc{Operating Systems}, Professor Mainak Chaudhari}
          {The coursework included implementation of system calls; process
           management and scheduling; memory management schemes and page replacement
-          algorithms in \textbf{NachOS}. \textbf{Professor Mainak Chaudhuri}, was
-          the professor-in-charge}\\
+          algorithms in \textbf{NachOS}.}
 
 \project {Fall 2013}
-         {P2P File Sharing and Streaming, \textsc{Computer Networks}}
+         {P2P File Sharing and Streaming}
+         {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
          {A Node.js based local file server and media playback server was implemented
           to understand the underpinnings of Transport Layer Protocols, socket programming,
-          and P2P architecture.  The project was supervised by \textbf{Professor Dheeraj Sanghi}.
-          \href{https://github.com/srijanshetty/nodesock} {[Git Repo]}}
+          and P2P architecture.  \href{https://github.com/srijanshetty/nodesock} {[Git Repo]}}
 
 \project {Fall 2013}
-         {IP Spoofing, \textsc{Computer Networks}}
-         {Under the guidance of \textbf{Professor Dheeraj Sanghi}, different methodologies
-          of spoofing IP addresses and different uses of spoofing IPs were implemented and tested
-          in a secure environment.}
+         {IP Spoofing}
+         {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
+         {The objective of the project was to create raw Internet Protocol packets with a spoofed source
+          address. These spoofed packets were then used to implement common exploits like Smurfing,
+          ARP Poisoning, DOS attacks.}
 
 \project {Fall 2013}
-         {Metro Travel Plan(Prolog), \textsc{Principles of Programming Languages}}
-         {Implementation of shortest paths in Prolog on the Delhi Metro route.
-          The professor-in-charge was \textbf{Professor P. Kurur}}
-
-\project {Fall 2013}
-         {Erlang Traffic Server, \textsc{Principles of Programming Languages}}
-         {A simple traffic server implemented in Erlang using message passing
-          concurrency and tail call recursion functional aspects of the language under the
-          guidance of \textbf{Professor P. Kurur}}
+         {Prolog Shortest Paths and Erlang Traffic Server}
+         {\textsc{Principles of Programming Languages}, Professor Piyush Kurur}
+         {Shortest paths algorithm was implemented in Prolog on the Delhi Metro route
+          using Logic Programming. A simple traffic server was also implemented in Erlang
+          using message passing concurrency and tail call recursion.}
 
 \project {Spring 2013}
-         {8-bit General Purpose Computer on a FPGA, \textsc{Computer Organization}}
+         {8-bit General Purpose Computer on a FPGA}
+         {\textsc{Computer Organization}, Professor Subhajit Roy}
          {The GPC had a load-store architecture and was written in System Verilog and
-          implemented on a \textbf{Xilinx Spartan 3 FPGA}.  The project was under the
-          supervision of \textbf{Professor Subhajit Roy}.  It had a limited, but powerful
+          implemented on a \textbf{Xilinx Spartan 3 FPGA}. It had a limited, but powerful
           Instruction Set Architecture which could implement recursive functions, jumps,
           loops  other basic building blocks of a simple assembly language.
           \href{https://github.com/srijanshetty/220_y11} {[Git Repo]}}
 
 \project {Spring 2013}
-         {Conference Dates Web Crawler, \textsc{Computing Laboratory}}
+         {Conference Dates Web Crawler}
+         {\textsc{Computing Laboratory}}
          {A python based web crawler which could obtain paper submission
           deadlines of a provided conference name.  BeautifulSoup and urllib along
           with simple pattern matching through regular expressions were used to implement crawling.
           \href{https://github.com/srijanshetty/crawler} {[Git Repo]}}
 
 \project {Fall 2011}
-         {"No situation is unique and certain moral principles can be applied across all situation",
-          \textsc{Introduction to Philosophy}}
+         {No situation is unique and certain moral principles can be applied across all situation}
+         {\textsc{Introduction to Philosophy}, Professor Vineet Sahu}
          {An argumentative discourse proving that certain moral principles
           can be applied throughout; by proving different situations have a certain
           fundamental similarity.  Albeit this would require a gross simplification of
@@ -308,70 +332,74 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Side Projects}
 
-\project {Jul 2014}
-         {OARS}
-         {OARS is a \textbf{AngularJS} based front-end for the
-          courses offered in IIT Kanpur. It was created as a
-          hack to alleviate the pain of the students in using the
-          sluggish legacy course search. The data was obtained by
-          scraping the official data portal of IIT Kanpur, and the
-          project is now maintained by \textbf{Navya}
-          \href{https://github.com/navya/oars} {[Git Repo]} }
+\sideproject {Jul 2014}
+             {OARS}
+             {OARS is a \textbf{AngularJS} based front-end for the
+              courses offered in IIT Kanpur. It was created as a
+              hack to alleviate the pain of the students in using the
+              sluggish legacy course search. The data was obtained by
+              scraping the official data portal of IIT Kanpur, and the
+              project is now maintained by \textbf{Navya}
+              \href{https://github.com/navya/oars} {[Git Repo]} }
 
-\project {Mar 2014}
-         {GYPH}
-         {GYPH or Get Your Personal Homepage
-          is a simple hassle-free homepage designer for students who are not
-          proficient in web technologies. It provides a WYSIWIG
-          interface for editing themes and downloading them for personal use.
-          \href{http://gyph2.herokuapp.com/} {[Website]} }
+\sideproject {Mar 2014}
+             {GYPH}
+             {GYPH or Get Your Personal Homepage
+              is a simple hassle-free homepage designer for students who are not
+              proficient in web technologies. It provides a WYSIWIG
+              interface for editing themes and downloading them for personal use.
+              \href{http://gyph2.herokuapp.com/} {[Website]} }
 
-\project {Aug 2013}
-         {ShuffleRun}
-         {ShuffleRun is a web based music player which selects a track from the
-          users library according to her running speed.
-          The project recieved an honorable mention in \textbf{Yahoo!  HackU 2013} IIT Kanpur round.
-          \href{https://github.com/srijanshetty/ShuffleRun} {[Git Repo]}}
+\sideproject {Aug 2013}
+             {ShuffleRun}
+             {ShuffleRun is a web based music player which selects a track from the
+              users library according to her running speed.
+              The project recieved an honorable mention in \textbf{Yahoo!  HackU 2013} IIT Kanpur round.
+              \href{https://github.com/srijanshetty/ShuffleRun} {[Git Repo]}}
 
-\project {Jul 2013}
-         {\href{www.udghosh.org}{Website of Udghosh}}
-         {Designer and webmaster of the website of Udghosh, the annual sports-fest of IIT Kanpur.}
+\sideproject {Summer 2012}
+             {Voicing, Archiving and Networking the Information \textsc{(VANI)}, IIT Kanpur}
+             {Vani is an \textbf{extensible} platform
+              made for the campus community consisting of Wiki, Forums,
+              Community search, Calendars etc.; built using \textbf{Drupal}
+              under the mentorship of \textbf{Professor Manindra Agarwal} and
+              \textbf{Professor T. V. Prabhakar} }
 
-\project {Dec 2012}
-         {\href{http://www.iitk.ac.in/hall5}{Website of Hall 5}, IIT Kanpur }
-         {Designer and webmaster of the website of Hall of residence 5.}
+\sideproject {Summer 2012}
+             {GNU/Linux Exploration, Programming Club, IIT Kanpur}
+             {The project involved exploration of various facets of
+              \textbf{GNU/Linux} like the file system, process management,
+              memory management, shell interface etc. And was
+              undertaken under the aegis of \textbf{Programming Club, IIT Kanpur}
+              \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}
+              {[Documentation]} }
 
-\project {Summer 2012}
-         {Voicing, Archiving and Networking the Information \textsc{(VANI)}, IIT Kanpur}
-         {Vani is an \textbf{extensible} platform
-          made for the campus community consisting of Wiki, Forums,
-          Community search, Calendars etc.; built using \textbf{Drupal}
-          under the mentorship of \textbf{Professor Manindra Agarwal} and
-          \textbf{Professor T. V. Prabhakar} }
+\projectlist {Projects on Github}
+             {
+                 \begin{itemize}
+                     \item \textbf{Dotfiles}: an opinionated work flow on Linux Systems.
+                         \href{https://github.com/srijanshetty/dotfiles} {[Git Repo]}
+                     \item \textbf{Prezto}: a fork of the Prezto ZSH framework
+                         \href{https://github.com/srijanshetty/prezto} {[Git Repo]}
+                     \item \textbf{oh-my-zsh}: a fork of the oh-my-zsh ZSH framework
+                         \href{https://github.com/srijanshetty/oh-my-zsh} {[Git Repo]}
+                     \item \textbf{DS}: implementation of certain algorithms and data structures
+                         \href{https://github.com/srijanshetty/DS} {[Git Repo]}
+                 \end{itemize}
+             }
 
-\project {Summer 2012}
-         {GNU/Linux Exploration, Programming Club, IIT Kanpur}
-         {The project involved exploration of various facets of
-          \textbf{GNU/Linux} like the file system, process management,
-          memory management, shell interface etc. And was
-          undertaken under the aegis of \textbf{Programming Club, IIT Kanpur}
-          \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}
-          {[Documentation]} }
+\projectlist {Web Development}
+             {
+                 \begin{itemize}
+                     \item \textbf{Udghosh}: The annual sports-fest of IIT Kanpur.
+                         \href{www.udghosh.org} {[URL]}
+                     \item \textbf{Hall 5}: Fifth Hall of Residence, IIT Kanpur.
+                         \href{http://www.iitk.ac.in/hall5} {[URL]}
+                     \item \textbf{ALI}: Antaragni Leadership Initiative.
+                         \href{www.antargni.in/ali} {[URL]}
+                 \end{itemize}
+             }
 
-\projectlist {Jul 2013}
-         {Projects on Github}
-         {
-             \begin{itemize}[leftmargin=*]
-                 \item \textbf{Dotfiles}: an opinionated work flow on Linux Systems.
-                     \href{https://github.com/srijanshetty/dotfiles} {[Git Repo]}
-                 \item \textbf{Prezto}: a fork of the Prezto ZSH framework
-                     \href{https://github.com/srijanshetty/prezto} {[Git Repo]}
-                 \item \textbf{oh-my-zsh}: a fork of the oh-my-zsh ZSH framework
-                     \href{https://github.com/srijanshetty/oh-my-zsh} {[Git Repo]}
-                 \item \textbf{DS}: implementation of certain algorithms and data structures
-                     \href{https://github.com/srijanshetty/DS} {[Git Repo]}
-             \end{itemize}
-         }
 
 %----------------------------------------------------------------------------------------
 %   OTHER SKILLS
@@ -379,29 +407,30 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \section {Social, Leadership and Artistic Skills}
 
+\sideproject {2013 -- }
+             {Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com}}
+
+\projectlist {Hacker, Navya, FOSS Group IIT Kanpur}
+             {
+                   \begin{itemize}
+                       \item Navya is the resident Free and Open Source Software Group of IIT Kanpur.
+                       \item Promoted the FOSS initiative by giving student lectures.
+                           And worked on student-centred projects like Course Search and Student Search.
+                           \href{https://github.com/navya} {[Git Repo]}
+                   \end{itemize}
+             }
+
+\projectlist {Community Service, English Proficiency Programme, 2013-2014}
+             {
+                   \begin{itemize}
+                       \item A brainchild of \textbf{Professor Bhaskardas Gupta}, English Proficiency
+                           Programme tries to impart a functional knowledge of English to students.
+                       \item I assisted in the first leg of the programme which focussed in helping
+                           under-privileged students learn English.
+                   \end{itemize}
+              }
+
 \itemlist{
-    ---   & Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com} \\
-
-    2013-2014    & \textbf{Hacker, Navya, FOSS Group IIT Kanpur}
-                   \footnotesize{
-                       \begin{itemize}[leftmargin=*]
-                           \item Navya is the resident Free and Open Source Software Group of IIT Kanpur.
-                           \item Promoted the FOSS initiative by giving student lectures.
-                               And worked on student-centred projects like Course Search and Student Search.
-                               \href{https://github.com/navya} {[Git Repo]}
-                       \end{itemize}
-                   }\\
-
-                   2013-2014    & \textbf{Volunteer, English Proficiency Programme (Community Service)}
-                   \footnotesize{
-                       \begin{itemize}[leftmargin=*]
-                           \item A brainchild of \textbf{Professor Bhaskardas Gupta}, English Proficiency
-                               Programme tries to impart a functional knowledge of English to students.
-                           \item I assisted in the first leg of the programme which focussed in helping
-                               under-privileged students learn English.
-                       \end{itemize}
-                   }\\
-
     2014 & \textbf{Head, Major Events and Competitions, Antaragni'14}
            \footnotesize{
                \begin{itemize}[leftmargin=*]
