Ledt alignment of r lists

--- a/cv.tex
+++ b/cv.tex
@@ -174,7 +174,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 \itemlist {
     \textsc{Jan 2011} & Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship \\
     \textsc{Dec 2008} & FIITJEE Talent Reward Examination Scholarship \\
-    \textsc{Dec 2009} & CSIR Programme on Youth for Leadership in Science (CPYLS camp),
+    \textsc{Dec 2009} & CSIR Programme on Youth for Leadership in Science
                         held at Advanced Materials Research Institute, Bhopal\\
 }
 
@@ -392,7 +392,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \projectlist {Projects on Github}
              {
-                 \begin{itemize}
+                 \begin{itemize}[leftmargin=0.5cm]
                      \item \textbf{Dotfiles}: an opinionated work flow on Linux Systems.
                          \href{https://github.com/srijanshetty/dotfiles} {[Git Repo]}
                      \item \textbf{Prezto}: a fork of the Prezto ZSH framework
@@ -406,7 +406,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \projectlist {Web Development}
              {
-                 \begin{itemize}
+                 \begin{itemize}[leftmargin=0.5cm]
                      \item \textbf{Udghosh}: The annual sports-fest of IIT Kanpur.
                          \href{www.udghosh.org} {[URL]}
                      \item \textbf{Hall 5}: Fifth Hall of Residence, IIT Kanpur.
@@ -425,7 +425,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \projectlist {Hacker, Navya, FOSS Group IIT Kanpur}
              {
-                   \begin{itemize}
+                   \begin{itemize}[leftmargin=0.5cm]
                        \item Navya is the resident Free and Open Source Software Group of IIT Kanpur.
                        \item Promoted the FOSS initiative by giving student lectures.
                            And worked on student-centred projects like Course Search and Student Search.
@@ -436,7 +436,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 \projectlistdated {2014}
                   {Head, Major Events and Competitions, Antaragni'14}
                   {
-                       \begin{itemize}
+                       \begin{itemize}[leftmargin=0.5cm]
                            \item Oversaw a team of \textbf{150} students for a span of 8 months.
                            \item Chalked out the logistics for the hospitality and accommodation of \textbf{1500 students} who
                                participated in festival.
@@ -448,7 +448,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 \projectlistdated {2013}
                   {Hospitality Coordinator, Antaragni'13}
                   {
-                       \begin{itemize}
+                       \begin{itemize}[leftmargin=0.5cm]
                            \item Oversaw a team of \textbf{150} students for a span of 8 months.
                            \item Chalked out the logistics for the hospitality and accommodation of \textbf{1500 students} who
                                participated in festival.
@@ -460,7 +460,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 \projectlistdated {2013 -- 2014}
                   {Community Service, English Proficiency Programme}
                   {
-                       \begin{itemize}
+                       \begin{itemize}[leftmargin=0.5cm]
                            \item A brainchild of \textbf{Professor Bhaskardas Gupta}, English Proficiency
                                Programme tries to impart a functional knowledge of English to students.
                            \item I assisted in the first leg of the programme which focussed in helping
@@ -471,7 +471,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 \projectlistdated {2013 -- 2014}
                   {Member, Gymkhana Review Committee}
                   {
-                       \begin{itemize}
+                       \begin{itemize}[leftmargin=0.5cm]
                            \item The GRC was established to revamp the Students' Gymkhana of IIT Kanpur,
                                which is responsible for all the student activities of the institute.
                            \item I chaired the sessions on \textbf{Extended Orientation of Freshmen}.
